--- a/listadetarefas.html
+++ b/listadetarefas.html
@@ -3,29 +3,42 @@
     <head>
         <title>Minhas tarefas diarias</title>
     </head>
+
     <body>
     </h1> Tarefas </h1>
-    <ul>
-        <li>Estudar html</li>
-        <li>Estudar css</li>
-        <li>Estuda JS</li>
-    </ul>
+    <ul></ul>
     <input>
-    <button onclick="jk()">adicionar</button>
+    <button onclick="add()">adicionar</button>
     <script>
-        function jk(){
-            const ul = document.querySelector("ul")
-            const input = document.querySelector("input")
-            console.log (input)
-            const tarefa = input.value
-            console.log(tarefa)
 
-            const li = document.createElement("li")
-            li.innerText= tarefa
-            ul.appendChild(li)
+        //estado da aplição 
+            const tarefas = ['Estudar HTML', 'Estudar CSS', 'Estudar JS']
+            console.log(tarefas)
 
-            input.value = ""
+        function add() {
+           const input = document.querySelector("input")
+           const tarefa = input.value
+
+            input.value = " "
         }
+
+        function render() {
+                const ul = document.querySelector("ul")
+
+                const li = document.createElement("li")
+                li.innerText = tarefa
+                ul.appendChild(li)
+
+                tarefas.forEach(function (tarefas) {
+                    console.log(tarefa)
+                })
+
+               // const li = document.createElement("li")
+               // li.innerText = tarefa
+                //ul.appendChild(li)
+         }
+
+         render()
     </script>
     </body>
 </html>
