--- a/listadetarefas.html
+++ b/listadetarefas.html
@@ -2,42 +2,98 @@
 <html>
     <head>
         <title>Minhas tarefas diarias</title>
+        <style>
+            *{
+                box-sizing: border-box;
+                margin: 0;
+            }
+
+            body{
+                border: 10px solid rgb(250, 189, 199);
+                min-height: 100vh;
+                font-family: arial, sans-serif;
+                display: flex;
+                flex-direction: column;
+                background: rgb(250, 165, 193);
+            }
+
+            header {
+                color: black;
+                text-transform: uppercase;
+                font-size: 20px;
+                text-align: center;
+                padding: 10px 0;
+            }
+
+            main{
+                flex: auto;
+                background: rgb(240, 145, 240);
+                padding: 20px;
+                border-radius: 10px ;
+            }
+            main ul {
+                padding: 0%;
+                list-style: none;
+            }
+
+            main li {
+                border-bottom: 1px solid black;
+                padding: 5px 0;
+            }
+
+            footer {
+                display: flex;
+                padding: 5px;
+            }
+            
+            footer input {
+                flex: auto;
+                padding: 5px;
+            }
+
+        </style>
     </head>
 
     <body>
-    </h1> Tarefas </h1>
-    <ul></ul>
-    <input>
+        <header>
+        </h1> Tarefas </h1>
+    </header>
+    <main>
+        <ul></ul>
+    </main>
+    <footer>
+     <input>
     <button onclick="add()">adicionar</button>
+    </footer>
     <script>
 
         //estado da aplição 
             const tarefas = ['Estudar HTML', 'Estudar CSS', 'Estudar JS']
             console.log(tarefas)
 
+            //alteradores de estado da aplição
         function add() {
            const input = document.querySelector("input")
            const tarefa = input.value
-
+           tarefas.push(tarefa)
             input.value = " "
+            render()
         }
 
+        //mostrar estado na tela
         function render() {
                 const ul = document.querySelector("ul")
+                ul.innerHTML = null
 
-                const li = document.createElement("li")
-                li.innerText = tarefa
-                ul.appendChild(li)
-
-                tarefas.forEach(function (tarefas) {
+                tarefas.forEach(function (tarefa) {
                     console.log(tarefa)
+               const li = document.createElement("li")
+               li.innerText = tarefa
+               ul.appendChild(li)
                 })
+        }
 
-               // const li = document.createElement("li")
-               // li.innerText = tarefa
-                //ul.appendChild(li)
-         }
-
+        //Iniciar
          render()
     </script>
     </body>
